--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,7 +2,7 @@ env:
   browser: true
   commonjs: true
   es2021: true
-extends: 'eslint:recommended'
+extends: "eslint:recommended"
 parserOptions:
   ecmaVersion: 12
 rules: {}
