Use TWITTER_SCREEN_NAME in .env file

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,6 @@ TWITTER_CONSUMER_KEY=
 TWITTER_CONSUMER_SECRET=
 TWITTER_ACCESS_TOKEN=
 TWITTER_ACCESS_TOKEN_SECRET=
-TWITTER_USER_ID=
+TWITTER_SCREEN_NAME=
 DISCORD_TOKEN=
 DISCORD_CHANNEL_ID=
